# TorchGNN-MLP

./: CMakeLists.txt  MLP_generator.py  README.md  collect_statistics.sh  main.cxx  statistics_collector.py
